--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,52 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Alliance for Cancer Care Equity
+description: Advancing equitable access to cancer care in Canada and Ghana.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Investing in Advancing the Bold Vision of Cancer Care Equity
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Ways to Give
+      link: https://www.allianceforcancercareequity.ca/donate
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Get Involved
+      link: mailto:support@allianceforcancercareequity.ca
       icon: external
       variant: minimal
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Our Vision, Our Mission
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+Cancer and its treatment impact patients and their families emotionally,
+spiritually, socially, and economically. ACCE is committed to providing
+support throughout this journey.
+
+## Invest in Cancer Care Equity
+
+Your donation contributes to providing cures and care, offering hope and
+compassion, and promoting equity in cancer treatment.
+
+## Our Ambitious Projects
+
+Through our projects, ACCE will lead efforts to achieve equity in cancer
+care by addressing persistent disparities across the entire continuum of
+cancer care.
+
+## Get Involved
+
+There are numerous ways to get involved with ACCE and make a meaningful
+impact in the lives of patients with cancer. Join the Alliance today.
+
+## Contact Us
+
+Alliance for Cancer Care Equity<br/>
+Tel: +1-226-698-2573<br/>
+Email: [support@allianceforcancercareequity.ca](mailto:support@allianceforcancercareequity.ca)
+
+Connect with us on [Instagram](https://instagram.com) |
+[Facebook](https://facebook.com) |
+[Twitter](https://twitter.com) |
+[LinkedIn](https://www.linkedin.com) |
+[YouTube](https://www.youtube.com)
